# reukocyte

./: .rubocop.yml  BENCHMARK.md  Cargo.toml  README.md  TODO.md  large_100k.rb  large_test.rb
.github/: copilot-instructions.md
benchmark/: bench.sh  large_test.rb  medium_test.rb  medium_test_no_violations.rb  small_test.rb  small_test_no_violations.rb
benchmarks/: benchmark.rb  benchmark_combined.rb  benchmark_rufo.rb  benchmark_server.rb  benchmark_server_combined.rb  benchmark_with_server.rb  generate_test_files.rb  run_benchmark.sh
benchmarks/test_files/: indentation_large.rb  indentation_medium.rb  indentation_small.rb  trailing_whitespace_large.rb  trailing_whitespace_medium.rb  trailing_whitespace_small.rb
crates/precop/: Cargo.toml
crates/precop/src/: main.rs
crates/precop_ast/: Cargo.toml
crates/precop_core/: Cargo.toml
crates/precop_layout/: Cargo.toml
crates/reukocyte/: Cargo.toml
crates/reukocyte/src/: args.rs  files.rs  main.rs  output.rs
crates/reukocyte_benchmark/: Cargo.toml
crates/reukocyte_benchmark/benches/: checker.rs  layout.rs  lint.rs
crates/reukocyte_benchmark/src/: lib.rs
crates/reukocyte_checker/: Cargo.toml  build.rs
crates/reukocyte_checker/src/: checker.rs  config.rs  conflict.rs  corrector.rs  diagnostic.rs  fix.rs  lib.rs  locator.rs  rule.rs  semantic.rs  utils.rs
crates/reukocyte_checker/src/analyze/: assingnment.rs  call.rs  expression.rs  mod.rs  node_variants.rs
crates/reukocyte_checker/src/analyze/node_variants/: alias_global_variable_node.rs  alias_method_node.rs  alternation_pattern_node.rs  and_node.rs  arguments_node.rs  array_node.rs  array_pattern_node.rs  assoc_node.rs  assoc_splat_node.rs  back_reference_read_node.rs  begin_node.rs  block_argument_node.rs  block_local_variable_node.rs  block_node.rs  block_parameter_node.rs  block_parameters_node.rs  break_node.rs  call_and_write_node.rs  call_node.rs  call_operator_write_node.rs  call_or_write_node.rs  call_target_node.rs  capture_pattern_node.rs  case_match_node.rs  case_node.rs  class_node.rs  class_variable_and_write_node.rs  class_variable_operator_write_node.rs  class_variable_or_write_node.rs  class_variable_read_node.rs  class_variable_target_node.rs  class_variable_write_node.rs  constant_and_write_node.rs  constant_operator_write_node.rs  constant_or_write_node.rs  constant_path_and_write_node.rs  constant_path_node.rs  constant_path_operator_write_node.rs  constant_path_or_write_node.rs  constant_path_target_node.rs  (+111 more)
crates/reukocyte_checker/src/config/: base.rs  converter.rs  layout.rs  lint.rs  loader.rs  macros.rs  mod.rs  serde_helpers.rs  yaml.rs
crates/reukocyte_checker/src/config/layout/: access_modifier_indentation.rs  begin_end_alignment.rs  def_end_alignment.rs  empty_lines.rs  end_alignment.rs  indentation_consistency.rs  indentation_style.rs  indentation_width.rs  leading_empty_lines.rs  mod.rs  trailing_empty_lines.rs  trailing_whitespace.rs
crates/reukocyte_checker/src/config/lint/: debugger.rs  mod.rs
crates/reukocyte_checker/src/custom_nodes/: assignment.rs  conditional.rs  mod.rs
crates/reukocyte_checker/src/rules/: mod.rs
crates/reukocyte_checker/src/rules/layout/: begin_end_alignment.rs  def_end_alignment.rs  empty_lines.rs  end_alignment.rs  end_keyword_alignment.rs  indentation_consistency.rs  indentation_style.rs  indentation_width.rs  leading_empty_lines.rs  mod.rs  trailing_empty_lines.rs  trailing_whitespace.rs
crates/reukocyte_checker/src/rules/lint/: debugger.rs  mod.rs
crates/reukocyte_checker/src/semantic/: mod.rs  model.rs  nodes.rs
crates/reukocyte_checker/src/utility/: access_modifier.rs  alignment.rs  assignment.rs  call_node.rs  mod.rs  node.rs  source.rs
crates/reukocyte_checker/tmp/: test.rb
crates/reukocyte_layout/: Cargo.toml
crates/reukocyte_lint/: Cargo.toml
crates/reukocyte_macros/: Cargo.toml
docs/: cli-options.md
scripts/: bench_internal.rb  benchmark_comparison.rb  benchmark_comparison.sh  benchmark_server_mode.rb  test_rubocop_compat.sh
testdata/: .rubocop.yml
testdata/layout/: test.rb  trailing_whitespace.rb
testdata/lint/: debugger.rb
tests/fixtures/: trailing_whitespace.rb
tmp/: .rubocop.yml  large_file.rb  large_file_backup.rb  test.rb  test2.rb  test_fix.rb  trailing.rb
tmp/bench/: all_rules_vs_rubocop.json  all_rules_vs_rubocop_single_pass.json  full_run_hyperfine.json  gigantic.rb  huge.rb  indent_violations.rb  indent_violations_indent_vs_rubocop.json  indent_vs_rubocop.json  indentation_consistency_hyperfine.json  large.rb  large_ast_layout_after_lazy_bench.csv  large_ast_layout_after_skip_bench.csv  large_ast_layout_bench.csv  large_bench.csv  large_indent_violations.rb  (+34 more)
(+19 files in other folders)
