[workspace]
resolver = "2"
members = [
    "crates/precop",
    "crates/precop_core",
    "crates/precop_ast",
    "crates/precop_layout",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/qraqras/precop"

[workspace.dependencies]
# Internal crates
precop_core = { path = "crates/precop_core" }
precop_ast = { path = "crates/precop_ast" }
precop_layout = { path = "crates/precop_layout" }

# External dependencies
ruby-prism = "1.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rayon = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
