[package]
name = "reukocyte"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reuko"
path = "src/main.rs"

[dependencies]
reukocyte_checker.workspace = true
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
globset = "0.4"
