[package]
name = "reukocyte_checker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ruby-prism.workspace = true
reukocyte_macros = { path = "../reukocyte_macros" }
rustc-hash = "2.1.1"

[build-dependencies]
regex = "1"
